<resources>
    <string name="app_name">My Wallet</string>
    <string name="title_creditor">الدائن</string>
    <string name="title_debtor">المدين</string>
    <string name="title_search">بحث</string>
    <string name="title_all">الكل</string>
    <string name="title_balance">الرصيد</string>
    <string name="mobile_number">رقم الجوال *</string>
    <string name="cash">المبلغ *</string>
    <string name="name">الاسم *</string>
    <string name="image">صورة الشخص (اختياري)</string>
    <string name="error_empty_field">هذا الجزء مطلوب</string>
    <string name="date">التاريخ *</string>
    <string name="reason">السبب *</string>
    <string name="image_selected">تم اختيار الصورة</string>
    <string name="no_transactions_added">لا توجد تعاملات !</string>
    <string name="no_persons_added">لا يوجد أشخاص !</string>
    <string name="add_transaction">إضافة معاملة جديدة</string>
    <string name="add_person">إضافة شخص جديد</string>
    <string name="add_persons_first">قم بإضافة أشخاص أولًا</string>
    <string name="delete">مسح</string>
    <string name="delete_person_title">هل تريد مسح هذا الشخص؟</string>
    <string name="delete_transaction_title">هل تريد مسح المعاملة؟</string>
    <string name="call">اتصال</string>
    <string name="cancel">إلغاء</string>
    <string name="edit">تعديل البيانات</string>
    <string name="add_from_contact">إضافة من جهات الإتصال</string>
    <string name="failed_add_from_contact">فشل في إضافة من جهات الإتصال</string>
    <string name="failed_add_person">فشل في إضافة هذا الشخص</string>
    <string name="failed_person_exists">هذا الشخص موجود بالفعل</string>
    <string name="failed_add_transaction">فشل في إضافة المعاملة</string>
    <string name="added_successfully">تمت الأضافة بنجاح</string>
    <string name="deleted_successfully">تم المسح بنجاح</string>
    <string name="updated_successfully">تم التعديل بنجاح</string>
    <string name="failed_deleted_person">فشل في مسح الشخص</string>
    <string name="failed_deleted_transaction">فشل في مسح المعاملة</string>
    <string name="failed_failed_person">فشل في تعديل بيانات الشخص</string>
    <string name="failed_update_transaction">فشل في تعديل المعاملة</string>
    <string name="cash_on_date">%1$s في %2$s</string>
    <string name="total">الإجمالي = %1$3d</string>
    <string name="search_hint">ادخل رقم الجوال او الاسم</string>
    <string name="debt">عليك</string>
    <string name="owned">لك</string>
</resources>