<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/creditorFragment">

    <fragment
        android:id="@+id/creditorFragment"
        android:name="com.moaazelneshawy.mywallet.presentation.ui.creditor.CreditorFragment"
        android:label="@string/title_creditor"
        tools:layout="@layout/fragment_creditor" />

    <fragment
        android:id="@+id/debtorFragment"
        android:name="com.moaazelneshawy.mywallet.presentation.ui.debtor.DebtorFragment"
        android:label="@string/title_debtor"
        tools:layout="@layout/fragment_debtor" />

    <fragment
        android:id="@+id/personsFragment"
        android:name="com.moaazelneshawy.mywallet.presentation.ui.persons.PersonsFragment"
        android:label="@string/title_all"
        tools:layout="@layout/fragment_persons" />
</navigation>