<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".presentation.ui.persons.PersonsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/personsFragmentRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noDataTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_persons_added"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_colorNormal="@color/middle"
        app:menu_colorPressed="@color/middle"
        app:menu_colorRipple="@color/light"
        app:menu_icon="@drawable/ic_add"
        app:menu_labels_position="right"
        app:menu_labels_singleLine="true"
        app:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/personsFragmentAddBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add"
            app:fab_colorNormal="@color/middle"
            app:fab_colorPressed="@color/middle"
            app:fab_colorRipple="@color/light"
            app:fab_label="@string/add_person"
            app:fab_shadowColor="@color/light"
            app:fab_showShadow="true" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addFromContactBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_add"
            app:fab_colorNormal="@color/middle"
            app:fab_colorPressed="@color/middle"
            app:fab_colorRipple="@color/light"
            app:fab_label="@string/add_from_contact"
            app:fab_shadowColor="@color/light"
            app:fab_showShadow="true" />

    </com.github.clans.fab.FloatingActionMenu>


</androidx.constraintlayout.widget.ConstraintLayout>