<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_dialog"
    android:layoutDirection="rtl"
    android:padding="@dimen/_10sdp"
    android:scrollbars="none">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/closeIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="@color/dark" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_spinner">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/personsSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_40sdp" />


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cashInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/cash"
            app:boxStrokeColor="@color/light"
            app:endIconDrawable="@drawable/ic_clear_text"
            app:endIconMode="clear_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cashET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890."
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:lines="1"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reasonInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/reason"
            app:boxStrokeColor="@color/light"
            app:endIconDrawable="@drawable/ic_clear_text"
            app:endIconMode="clear_text"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reasonET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/date"
            app:boxStrokeColor="@color/light"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:lines="1"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/roleRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/creditorRB"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/creditorRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title_creditor" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/debtorRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/title_debtor" />

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addMoneyBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/dark"
            android:src="@drawable/ic_add"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>